--- a/scss-css/blocks/header.scss
+++ b/scss-css/blocks/header.scss
@@ -3,3 +3,15 @@
   display: flex;
   justify-content: space-between;
 }
+
+.header-title {
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+}
+
+.logo-img {
+  width: 75px;
+  height: 75px;
+}
