--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -5,11 +5,22 @@
   justify-content: space-between;
 }
 
+.header-title {
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+}
+
+.logo-img {
+  width: 75px;
+  height: 75px;
+}
+
 /* main */
 /* section categories */
 /* section reviews */
 /* footer */
-/* mixin */
 /* mixin */
 * {
   box-sizing: border-box;
