--- a/scss-css/blocks/header.scss
+++ b/scss-css/blocks/header.scss
@@ -1,17 +1,80 @@
+.header-container {
+  padding: 10px;
+}
+
+/* header logo */
+
 .nav,
 .header-logo-href {
   display: flex;
   justify-content: space-between;
 }
 
+.header-logo {
+  width: 30%;
+}
+
+.header-logo-href {
+  text-decoration: none;
+}
+
 .header-title {
   font-family: "Great Vibes", cursive;
-  font-weight: 400;
+  font-weight: 600;
   font-style: normal;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 0.65;
+  padding-top: 12px;
 }
 
 .logo-img {
-  width: 75px;
-  height: 75px;
+  width: 40px;
+  height: 40px;
+}
+
+/* header menu */
+
+#menu {
+  display: none;
+}
+
+.burger {
+  padding-top: 5px;
+
+  width: 20px;
+  height: 20px;
+
+  display: block;
+  background-color: #ffffff;
+}
+
+.burger span {
+  display: block;
+
+  width: 18px;
+  height: 2px;
+
+  background-color: #03a9f4;
+  box-shadow: 0px 5px 0 #03a9f4, 0px 10px 0 #03a9f4;
+}
+
+.header-menu {
+  display: none;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 1s;
+}
+
+#menu:checked ~ .header-menu {
+  display: block;
+  position: fixed;
+
+  padding: 10px;
+
+  width: 100%;
+  left: 0;
+  right: 0;
+
+  box-sizing: border-box;
+  transform: scaleY(1);
 }
