--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -55,20 +55,25 @@
 
 .header-menu {
   display: none;
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: 1s;
+  width: 50%;
+  background-color: #d7dcdf;
+  height: 100%;
+  top: 0;
+  border: 1px solid #03a9f4;
+  border-radius: 0px 3px 3px 0px;
 }
 
 #menu:checked ~ .header-menu {
   display: block;
   position: fixed;
   padding: 10px;
-  width: 100%;
   left: 0;
   right: 0;
   box-sizing: border-box;
-  transform: scaleY(1);
+}
+
+#menu:checked ~ body {
+  opacity: 0.8;
 }
 
 /* main */
