--- a/scss-css/blocks/header.scss
+++ b/scss-css/blocks/header.scss
@@ -15,6 +15,7 @@
 }
 
 .header-logo-href {
+  color: #03a9f4;
   text-decoration: none;
 }
 
@@ -55,18 +56,35 @@
   height: 2px;
 
   background-color: #03a9f4;
-  box-shadow: 0px 5px 0 #03a9f4, 0px 10px 0 #03a9f4;
+}
+
+.burger::before {
+  margin-bottom: 3px;
+  background-color: #03a9f4;
+}
+
+.burger::after {
+  margin-top: 3px;
+  background-color: #03a9f4;
+}
+
+.burger::before,
+.burger::after {
+  content: "";
+  display: block;
+  width: 18px;
+  height: 2px;
 }
 
 .header-menu {
+  margin-top: 20px;
   display: none;
 
-  width: 50%;
-  background-color: #d7dcdf;
+  width: 100%;
   height: 100%;
-  top: 0;
+
+  background-color: #d7dcdf;
   border: 1px solid #03a9f4;
-  border-radius: 0px 3px 3px 0px;
 }
 
 #menu:checked ~ .header-menu {
@@ -79,4 +97,53 @@
   right: 0;
 
   box-sizing: border-box;
+}
+
+/* menu */
+
+.menu {
+  list-style: none;
+}
+
+.menu-link {
+  text-decoration: none;
+}
+
+.menu-link,
+summary {
+  font-family: "Gabriela", serif;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+
+  color: black;
+}
+
+summary {
+  display: block;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+summary::after {
+  display: flex;
+  width: 10px;
+  height: 10px;
+  content: "";
+  background: url("../img/caret.png") no-repeat;
+  padding-right: 0.5em;
+  background-size: 10px;
+  translate: 75px -10px;
+  transform: rotateZ(90deg);
+}
+
+details[open] > summary::after {
+  display: flex;
+  content: "";
+  background: url("../img/caret.png") no-repeat;
+  background-size: 10px;
+  translate: 75px -15px;
+  transform: rotateZ(-90deg);
 }
