--- a/scss-css/blocks/header.scss
+++ b/scss-css/blocks/header.scss
@@ -83,7 +83,6 @@
   width: 100%;
   height: 100%;
 
-  background-color: #d7dcdf;
   border: 1px solid #03a9f4;
 }
 
@@ -91,12 +90,17 @@
   display: block;
   position: fixed;
 
-  padding: 10px;
-
   left: 0;
   right: 0;
 
   box-sizing: border-box;
+}
+
+.drop-menu {
+  padding: 30px 0px;
+  text-align: center;
+
+  background-color: #ffffff;
 }
 
 /* menu */
@@ -105,12 +109,15 @@
   list-style: none;
 }
 
+.menu-list {
+  padding-bottom: 10px;
+}
 .menu-link {
   text-decoration: none;
 }
 
 .menu-link,
-summary {
+.link-list {
   font-family: "Gabriela", serif;
   font-size: 14px;
   font-weight: 400;
@@ -119,31 +126,47 @@ summary {
   color: black;
 }
 
-summary {
+.link-list {
   display: block;
 }
 
-summary::-webkit-details-marker {
+.link-list::-webkit-details-marker {
   display: none;
 }
 
-summary::after {
-  display: flex;
-  width: 10px;
+.link-list::after {
+  margin-left: 5px;
+
+  display: inline-block;
+
+  width: 3px;
   height: 10px;
+
   content: "";
   background: url("../img/caret.png") no-repeat;
   padding-right: 0.5em;
   background-size: 10px;
-  translate: 75px -10px;
+
   transform: rotateZ(90deg);
 }
 
-details[open] > summary::after {
-  display: flex;
+.list[open] > summary::after {
   content: "";
   background: url("../img/caret.png") no-repeat;
   background-size: 10px;
-  translate: 75px -15px;
+
   transform: rotateZ(-90deg);
+  translate: 0px 3px;
+}
+
+.list-menu {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-footer {
+  height: 100%;
+  background-color: #d7dcdf;
+  opacity: 0.8;
 }
