добавила картинку фоном в main

--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -156,6 +156,11 @@
 }
 
 /* main */
+.main-container {
+  min-height: 600px;
+  background: url("../img/main-img.jpg") center top no-repeat;
+}
+
 /* section categories */
 /* section reviews */
 /* footer */
