написала подвал и медиа запросы 620px

--- a/scss-css/blocks/footer.css
+++ b/scss-css/blocks/footer.css
@@ -1,1 +1,44 @@
-/*# sourceMappingURL=footer.css.map */
+.footer-container {
+  background-color: #d7dcdf;
+}
+
+.info {
+  margin: 0px;
+  font-family: "Gabriela", serif;
+  font-size: 8px;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+}
+
+.footer-menu {
+  padding-top: 10px;
+}
+
+.icon-img {
+  width: 15px;
+  height: 15px;
+  color: #03a9f4;
+}
+
+.footer-menu-list:nth-child(1),
+.footer-menu-list:nth-child(2) {
+  display: none;
+}
+
+@media (min-width: 620px) {
+  .info {
+    font-size: 10px;
+  }
+  .icon-img {
+    width: 25px;
+    height: 25px;
+  }
+  .footer-menu {
+    min-width: 480px;
+  }
+  .footer-menu-list:nth-child(1),
+  .footer-menu-list:nth-child(2) {
+    display: block;
+  }
+}/*# sourceMappingURL=footer.css.map */
