--- a/scss-css/blocks/header.scss
+++ b/scss-css/blocks/header.scss
@@ -1,25 +1,21 @@
-.header-container {
-  padding: 10px;
-}
-
 /* header logo */
 
 .nav,
-.header-logo-href {
+.logo-href {
   display: flex;
   justify-content: space-between;
 }
 
-.header-logo {
+.logo {
   width: 30%;
 }
 
-.header-logo-href {
+.logo-href {
   color: #03a9f4;
   text-decoration: none;
 }
 
-.header-title {
+.title {
   font-family: "Great Vibes", cursive;
   font-weight: 600;
   font-style: normal;
@@ -40,7 +36,7 @@
 }
 
 .burger {
-  padding-top: 5px;
+  padding-top: 15px;
 
   width: 20px;
   height: 20px;
@@ -83,7 +79,7 @@
   width: 100%;
   height: 100%;
 
-  border: 1px solid #03a9f4;
+  outline: 1px solid #03a9f4;
 }
 
 #menu:checked ~ .header-menu {
@@ -112,6 +108,7 @@
 .menu-list {
   padding-bottom: 10px;
 }
+
 .menu-link {
   text-decoration: none;
 }
@@ -169,4 +166,70 @@
   height: 100%;
   background-color: #d7dcdf;
   opacity: 0.8;
+}
+
+@media (min-width: 620px) {
+  /* header logo */
+
+  .logo {
+    width: 25%;
+  }
+
+  .title {
+    font-size: 25px;
+  }
+
+  .logo-img {
+    width: 50px;
+    height: 50px;
+  }
+
+  /* header menu */
+
+  .burger {
+    display: none;
+  }
+
+  .header-menu {
+    margin: 0px;
+    min-width: 400px;
+    display: block;
+    outline: none;
+  }
+
+  .drop-menu {
+    padding: 0px;
+    text-align: left;
+  }
+
+  .menu {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .list-menu {
+    position: fixed;
+  }
+
+  .nav-footer {
+    display: none;
+  }
+
+  .menu-link,
+  .link-list {
+    font-size: 20px;
+  }
+
+  .menu-list:nth-child(4),
+  .menu-list:nth-child(5) {
+    display: none;
+  }
+
+  .list-menu {
+    padding: 10px 10px 10px 20px;
+    width: 170px;
+    background-color: #ffffff;
+    border: 1px solid #03a9f4;
+    border-radius: 16px;
+  }
 }
