--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -1,25 +1,21 @@
 /* header */
-.header-container {
-  padding: 10px;
-}
-
 /* header logo */
 .nav,
-.header-logo-href {
+.logo-href {
   display: flex;
   justify-content: space-between;
 }
 
-.header-logo {
+.logo {
   width: 30%;
 }
 
-.header-logo-href {
+.logo-href {
   color: #03a9f4;
   text-decoration: none;
 }
 
-.header-title {
+.title {
   font-family: "Great Vibes", cursive;
   font-weight: 600;
   font-style: normal;
@@ -39,7 +35,7 @@
 }
 
 .burger {
-  padding-top: 5px;
+  padding-top: 15px;
   width: 20px;
   height: 20px;
   display: block;
@@ -76,7 +72,7 @@
   display: none;
   width: 100%;
   height: 100%;
-  border: 1px solid #03a9f4;
+  outline: 1px solid #03a9f4;
 }
 
 #menu:checked ~ .header-menu {
@@ -155,15 +151,115 @@
   opacity: 0.8;
 }
 
+@media (min-width: 620px) {
+  /* header logo */
+  .logo {
+    width: 25%;
+  }
+  .title {
+    font-size: 25px;
+  }
+  .logo-img {
+    width: 50px;
+    height: 50px;
+  }
+  /* header menu */
+  .burger {
+    display: none;
+  }
+  .header-menu {
+    margin: 0px;
+    min-width: 400px;
+    display: block;
+    outline: none;
+  }
+  .drop-menu {
+    padding: 0px;
+    text-align: left;
+  }
+  .menu {
+    display: flex;
+    justify-content: space-between;
+  }
+  .list-menu {
+    position: fixed;
+  }
+  .nav-footer {
+    display: none;
+  }
+  .menu-link,
+  .link-list {
+    font-size: 20px;
+  }
+  .menu-list:nth-child(4),
+  .menu-list:nth-child(5) {
+    display: none;
+  }
+  .list-menu {
+    padding: 10px 10px 10px 20px;
+    width: 170px;
+    background-color: #ffffff;
+    border: 1px solid #03a9f4;
+    border-radius: 16px;
+  }
+}
 /* main */
+.main {
+  background-color: #d7dcdf;
+}
+
 .main-container {
-  min-height: 600px;
+  min-height: 750px;
   background: url("../img/main-img.jpg") center top no-repeat;
 }
 
 /* section categories */
 /* section reviews */
 /* footer */
+.footer-container {
+  background-color: #d7dcdf;
+}
+
+.info {
+  margin: 0px;
+  font-family: "Gabriela", serif;
+  font-size: 8px;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+}
+
+.footer-menu {
+  padding-top: 10px;
+}
+
+.icon-img {
+  width: 15px;
+  height: 15px;
+  color: #03a9f4;
+}
+
+.footer-menu-list:nth-child(1),
+.footer-menu-list:nth-child(2) {
+  display: none;
+}
+
+@media (min-width: 620px) {
+  .info {
+    font-size: 10px;
+  }
+  .icon-img {
+    width: 25px;
+    height: 25px;
+  }
+  .footer-menu {
+    min-width: 480px;
+  }
+  .footer-menu-list:nth-child(1),
+  .footer-menu-list:nth-child(2) {
+    display: block;
+  }
+}
 /* mixin */
 * {
   box-sizing: border-box;
@@ -176,10 +272,9 @@ body {
 }
 
 body {
-  /*  @include font(16px, 400);  */
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
+  outline: 1px solid red;
 }
 
 .hidden-section {
@@ -193,12 +288,19 @@ body {
 
 .container {
   min-width: 320px;
-  max-width: 1240px;
+  max-width: 1200px;
   margin: 0 auto;
-  border: 1px solid blue;
+  padding: 0px 20px;
+  outline: 1px solid blue;
 }
 
 .main {
   flex-grow: 1;
-  border: 5px solid green;
+  outline: 5px solid green;
+}
+
+@media (min-width: 620px) {
+  .container {
+    padding: 30px 0;
+  }
 }/*# sourceMappingURL=style.css.map */
