--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -34,10 +34,9 @@ body {
 }
 
 body {
-  /*  @include font(16px, 400);  */
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
+  outline: 1px solid red;
 }
 
 .hidden-section {
@@ -46,12 +45,19 @@ body {
 
 .container {
   min-width: 320px;
-  max-width: 1240px;
+  max-width: 1200px;
   margin: 0 auto;
-  border: 1px solid blue;
+  padding: 0px 20px;
+  outline: 1px solid blue;
 }
 
 .main {
   flex-grow: 1;
-  border: 5px solid green;
+  outline: 5px solid green;
+}
+
+@media (min-width: 620px) {
+  .container {
+    padding: 30px 0;
+  }
 }
