--- a/scss-css/blocks/header.scss
+++ b/scss-css/blocks/header.scss
@@ -82,9 +82,9 @@
   right: 0;
   top: 40px;
 
-  padding: 30px 0px;
+  padding: 30px 10px;
 
-  width: 200px;
+  width: 250px;
 
   background-color: #ffffff;
   outline: 1px solid #03a9f4;
@@ -112,7 +112,7 @@
 .menu-link,
 .link-list {
   font-family: "Gabriela", serif;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 400;
   font-style: normal;
 
@@ -182,15 +182,21 @@
   }
 
   .header-menu {
-    margin: 0px;
-    min-width: 400px;
-    display: block;
-    outline: none;
+    opacity: 1;
   }
 
   .drop-menu {
+    position: relative;
+    top: 0;
+    right: 5px;
+
     padding: 0px;
-    text-align: left;
+    margin: 0px;
+
+    min-width: 470px;
+
+    border-radius: inherit;
+    outline: none;
   }
 
   .menu {
