--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -75,8 +75,8 @@
   position: fixed;
   right: 0;
   top: 40px;
-  padding: 30px 0px;
-  width: 200px;
+  padding: 30px 10px;
+  width: 250px;
   background-color: #ffffff;
   outline: 1px solid #03a9f4;
   border-radius: 16px;
@@ -102,7 +102,7 @@
 .menu-link,
 .link-list {
   font-family: "Gabriela", serif;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 400;
   font-style: normal;
   color: black;
@@ -160,14 +160,17 @@
     display: none;
   }
   .header-menu {
-    margin: 0px;
-    min-width: 400px;
-    display: block;
-    outline: none;
+    opacity: 1;
   }
   .drop-menu {
+    position: relative;
+    top: 0;
+    right: 5px;
     padding: 0px;
-    text-align: left;
+    margin: 0px;
+    min-width: 470px;
+    border-radius: inherit;
+    outline: none;
   }
   .menu {
     display: flex;
