--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -4,8 +4,8 @@
 /* main */
 @use "blocks/main.scss";
 
-/* section categories */
-@use "blocks/categories.scss";
+/* section category page */
+@use "blocks/category-page.scss";
 
 /* section reviews */
 @use "blocks/reviews.scss";
