добавила хлебные крошки на страницу экскурсий

--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -1,3 +1,1 @@
-.category-main-container {
-  background-color: #ffffff;
-}/*# sourceMappingURL=category-page.css.map */
+/*# sourceMappingURL=category-page.css.map */
