--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -1,2 +1,5 @@
 /* mixin */
-/* mixin *//*# sourceMappingURL=category-page.css.map */
+/* mixin */
+.category-main-container {
+  border-top: 1px solid #03a9f4;
+}/*# sourceMappingURL=category-page.css.map */
