--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -10,7 +10,7 @@
 /* section category page */
 @import "blocks/category-page.scss";
 
-@import "blocks/breadcrumbls.scss";
+@import "blocks/breadcrumbles.scss";
 
 /* section reviews */
 @import "blocks/reviews.scss";
