--- a/scss-css/blocks/breadcrumbles.css
+++ b/scss-css/blocks/breadcrumbles.css
@@ -1,7 +1,7 @@
 /* mixin */
 /* mixin */
 /* breadcrumbles */
-.breadcrumbls {
+.breadcrumbles {
   padding: 10px 0px;
 }
 
@@ -20,7 +20,6 @@
   font-style: normal;
   color: black;
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.6);
 }
 .menu-link-breadcrumbles:hover,
 .menu-link-breadcrumbles-bold:hover {
@@ -33,4 +32,17 @@
 
 .menu-link-breadcrumbles-bold {
   color: #000000;
+}
+
+.menu-link-breadcrumbles {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.arrow-menu-breadcrumbles {
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  padding: 5px;
+  background: url(../img/caret.png) no-repeat;
+  background-size: 10px;
 }/*# sourceMappingURL=breadcrumbles.css.map */
