--- a/scss-css/blocks/breadcrumbles.scss
+++ b/scss-css/blocks/breadcrumbles.scss
@@ -2,7 +2,7 @@
 @import "mixin.scss";
 
 /* breadcrumbles */
-.breadcrumbls {
+.breadcrumbles {
   padding: 10px 0px;
 }
 
@@ -13,15 +13,11 @@
   list-style: none;
 }
 
-.menu-list-breadcrumbles {
-}
-
 .menu-link-breadcrumbles,
 .menu-link-breadcrumbles-bold {
   @include font(12px);
 
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.6);
 
   &:hover {
     color: #000000;
@@ -34,4 +30,20 @@
 
 .menu-link-breadcrumbles-bold {
   color: #000000;
+}
+
+.menu-link-breadcrumbles {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.arrow-menu-breadcrumbles {
+  width: 10px;
+  height: 10px;
+
+  display: inline-block;
+
+  padding: 5px;
+
+  background: url(../img/caret.png) no-repeat;
+  background-size: 10px;
 }
