--- a/scss-css/blocks/header.css
+++ b/scss-css/blocks/header.css
@@ -39,7 +39,7 @@
   position: relative;
 }
 .main-nav:hover .header-menu {
-  opacity: 1;
+  transform: scale(1, 1);
 }
 
 .burger {
@@ -78,8 +78,8 @@
 
 .drop-menu {
   position: fixed;
-  right: 0;
-  top: 40px;
+  right: -15px;
+  top: 20px;
   padding: 30px 10px;
   width: 250px;
   background-color: #ffffff;
@@ -88,7 +88,9 @@
 }
 
 .header-menu {
-  opacity: 0;
+  transform: scale(0, 0);
+  transform-origin: right top;
+  transition: 0.5s;
 }
 
 /* menu */
@@ -165,7 +167,9 @@
     display: none;
   }
   .header-menu {
-    opacity: 1;
+    transform: scale(1, 1);
+    transform-origin: right top;
+    transition: 0.5s;
   }
   .drop-menu {
     position: relative;
