--- a/scss-css/blocks/header.scss
+++ b/scss-css/blocks/header.scss
@@ -41,7 +41,7 @@
   position: relative;
 
   &:hover .header-menu {
-    opacity: 1;
+    transform: scale(1, 1);
   }
 }
 
@@ -86,8 +86,8 @@
 .drop-menu {
   position: fixed;
 
-  right: 0;
-  top: 40px;
+  right: -15px;
+  top: 20px;
 
   padding: 30px 10px;
 
@@ -99,7 +99,9 @@
 }
 
 .header-menu {
-  opacity: 0;
+  transform: scale(0, 0);
+  transform-origin: right top;
+  transition: 0.5s;
 }
 
 /* menu */
@@ -184,7 +186,9 @@
   }
 
   .header-menu {
-    opacity: 1;
+    transform: scale(1, 1);
+    transform-origin: right top;
+    transition: 0.5s;
   }
 
   .drop-menu {
