--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -12,9 +12,11 @@
 }
 
 .item-cart {
-  margin-bottom: 30px;
+  position: relative;
 
   min-width: 280px;
+
+  margin-bottom: 30px;
 
   /*shadow */
 
@@ -23,6 +25,22 @@
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 16px;
+}
+
+.item-cart-desc,
+.item-title {
+  @include font(14px, #03a9f4);
+}
+
+.item-cart-desc {
+  position: absolute;
+  top: 0px;
+  padding: 0px 20px;
+
+  min-width: 280px;
+
+  display: flex;
+  justify-content: space-between;
 }
 
 .item-img {
@@ -39,8 +57,6 @@
 .item-title {
   padding: 20px;
 
-  @include font(16px, #03a9f4);
-
   list-style: none;
   transition: 0.5s;
 }
@@ -51,10 +67,11 @@
 
 .item-desc {
   padding: 20px;
+  @include font(14px);
 }
 
 .item-text {
-  @include font(14px);
+  font-size: 14px;
 }
 
 @media (min-width: 620px) {
