--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -30,17 +30,18 @@
 .item-cart-desc,
 .item-title {
   @include font(14px, #03a9f4);
-}
-
-.item-cart-desc {
-  position: absolute;
-  top: 0px;
-  padding: 0px 20px;
-
-  min-width: 280px;
 
   display: flex;
   justify-content: space-between;
+}
+
+.item-cart-desc {
+  padding: 0px 20px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .item-img {
@@ -61,6 +62,17 @@
   transition: 0.5s;
 }
 
+.item-title::after {
+  display: inline-block;
+  content: "подробнее ...";
+  font-size: 14px;
+}
+
+.item-list[open] > summary::after {
+  content: "закрыть";
+  font-size: 14px;
+}
+
 .item-list[open] {
   border-radius: 16px 16px 0px 0px;
 }
@@ -79,12 +91,28 @@
     height: 300px;
   }
 
-  .item-text {
-    @include font(16px);
+  .item-text,
+  .item-cart-desc {
+    font-size: 16px;
   }
 
   .item-title {
-    @include font(20px, #03a9f4);
+    font-size: 25px;
+  }
+
+  .item-list[open] > summary::after {
+    content: "закрыть";
+    font-size: 16px;
+
+    padding-top: 15px;
+  }
+
+  .item-title::after {
+    display: inline-block;
+    content: "подробнее ...";
+    font-size: 16px;
+
+    padding-top: 15px;
   }
 }
 
@@ -93,12 +121,24 @@
     height: 350px;
   }
 
-  .item-text {
-    @include font(20px);
+  .item-text,
+  .item-cart-desc {
+    font-size: 20px;
   }
 
   .item-title {
-    @include font(25px, #03a9f4);
+    font-size: 35px;
+  }
+
+  .item-list[open] > summary::after {
+    content: "закрыть";
+    font-size: 20px;
+  }
+
+  .item-title::after {
+    display: inline-block;
+    content: "подробнее ...";
+    font-size: 20px;
   }
 }
 
@@ -107,11 +147,23 @@
     height: 650px;
   }
 
-  .item-text {
-    @include font(25px);
+  .item-text,
+  .item-cart-desc {
+    font-size: 25px;
   }
 
   .item-title {
-    @include font(35px, #03a9f4);
+    font-size: 45px;
+  }
+
+  .item-list[open] > summary::after {
+    content: "закрыть";
+    font-size: 25px;
+  }
+
+  .item-title::after {
+    display: inline-block;
+    content: "подробнее ...";
+    font-size: 25px;
   }
 }
