--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -22,8 +22,8 @@
 
   outline: 1px solid #d6d3d3;
   border-bottom: 2px solid #c4c2c2;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
+  -webkit-border-radius: 16px;
+
   border-radius: 16px;
 }
 
@@ -59,7 +59,11 @@
   padding: 20px;
 
   list-style: none;
-  transition: 0.5s;
+  transition: 1s;
+
+  &:hover {
+    color: #03f40d9e;
+  }
 }
 
 .item-title::after {
