--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -275,9 +275,6 @@
   list-style: none;
   transition: 1s;
 }
-.item-title:hover {
-  color: rgba(3, 244, 13, 0.6196078431);
-}
 
 .item-title::after {
   display: inline-block;
@@ -288,6 +285,7 @@
 .item-list[open] > summary::after {
   content: "закрыть";
   font-size: 14px;
+  text-shadow: 1px 1px 2px rgba(3, 244, 13, 0.6196078431);
 }
 
 .item-list[open] {
