--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -10,6 +10,7 @@
   margin: 30px 0px;
 }
 
+/* item cart */
 .item-cart {
   position: relative;
   min-width: 280px;
@@ -42,6 +43,10 @@
 .item-img {
   width: 100%;
   height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   border-radius: 16px 16px 0px 0px;
 }
 
@@ -71,6 +76,7 @@
   border-radius: 16px 16px 0px 0px;
 }
 
+/* section item desc */
 .item-desc {
   padding: 20px;
   font-family: "Gabriela", serif;
@@ -86,7 +92,7 @@
 
 @media (min-width: 620px) {
   .item-img {
-    height: 300px;
+    height: 350px;
   }
   .item-text,
   .item-cart-desc {
@@ -109,7 +115,7 @@
 }
 @media (min-width: 700px) {
   .item-img {
-    height: 350px;
+    height: 450px;
   }
   .item-text,
   .item-cart-desc {
