--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -11,6 +11,8 @@
   margin: 30px 0px;
 }
 
+/* item cart */
+
 .item-cart {
   position: relative;
 
@@ -47,6 +49,8 @@
 .item-img {
   width: 100%;
   height: 200px;
+  object-fit: cover;
+  object-position: center;
 
   border-radius: 16px 16px 0px 0px;
 }
@@ -78,6 +82,8 @@
   border-radius: 16px 16px 0px 0px;
 }
 
+/* section item desc */
+
 .item-desc {
   padding: 20px;
   @include font(14px);
@@ -89,7 +95,7 @@
 
 @media (min-width: 620px) {
   .item-img {
-    height: 300px;
+    height: 350px;
   }
 
   .item-text,
@@ -119,7 +125,7 @@
 
 @media (min-width: 700px) {
   .item-img {
-    height: 350px;
+    height: 450px;
   }
 
   .item-text,
