--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -263,6 +263,10 @@
 .item-img {
   width: 100%;
   height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   border-radius: 16px 16px 0px 0px;
 }
 
@@ -307,7 +311,7 @@
 
 @media (min-width: 620px) {
   .item-img {
-    height: 300px;
+    height: 350px;
   }
   .item-text,
   .item-cart-desc {
@@ -330,7 +334,7 @@
 }
 @media (min-width: 700px) {
   .item-img {
-    height: 350px;
+    height: 450px;
   }
   .item-text,
   .item-cart-desc {
