--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -231,6 +231,7 @@
   margin: 30px 0px;
 }
 
+/* item cart */
 .item-cart {
   position: relative;
   min-width: 280px;
@@ -296,6 +297,7 @@
   border-radius: 16px 16px 0px 0px;
 }
 
+/* section item desc */
 .item-desc {
   padding: 20px;
   font-family: "Gabriela", serif;
@@ -311,14 +313,14 @@
 
 @media (min-width: 620px) {
   .item-img {
-    height: 350px;
+    height: 250px;
   }
   .item-text,
   .item-cart-desc {
     font-size: 16px;
   }
   .item-title {
-    font-size: 25px;
+    font-size: 20px;
   }
   .item-list[open] > summary::after {
     content: "закрыть";
@@ -334,44 +336,25 @@
 }
 @media (min-width: 700px) {
   .item-img {
-    height: 450px;
-  }
-  .item-text,
-  .item-cart-desc {
-    font-size: 20px;
-  }
-  .item-title {
-    font-size: 35px;
-  }
-  .item-list[open] > summary::after {
-    content: "закрыть";
-    font-size: 20px;
-  }
-  .item-title::after {
-    display: inline-block;
-    content: "подробнее ...";
-    font-size: 20px;
+    height: 300px;
   }
 }
 @media (min-width: 1024px) {
-  .item-img {
-    height: 650px;
-  }
   .item-text,
   .item-cart-desc {
-    font-size: 25px;
+    font-size: 20px;
   }
   .item-title {
-    font-size: 45px;
+    font-size: 25px;
   }
   .item-list[open] > summary::after {
     content: "закрыть";
-    font-size: 25px;
+    font-size: 20px;
   }
   .item-title::after {
     display: inline-block;
     content: "подробнее ...";
-    font-size: 25px;
+    font-size: 20px;
   }
 }
 /* mixin */
