--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -28,10 +28,10 @@ body {
   margin: 0;
 }
 
-body {
+.page {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+
   outline: 1px solid red;
 }
 
