дописала стили основной информации и кнопки забронировать экскурсию в мобильной версии

--- a/scss-css/blocks/main.css
+++ b/scss-css/blocks/main.css
@@ -3,6 +3,12 @@
 }
 
 .main-container {
-  min-height: 600px;
+  height: 600px;
   background: url("../img/main-img.jpg") center top no-repeat;
+}
+
+@media (min-width: 620px) {
+  .main-container {
+    height: 750px;
+  }
 }/*# sourceMappingURL=main.css.map */
