--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -78,7 +78,6 @@
 
 /* section item desc */
 .item-desc {
-  padding: 20px;
   font-family: "Gabriela", serif;
   font-size: 14px;
   font-weight: 400;
@@ -88,6 +87,70 @@
 
 .item-text {
   font-size: 14px;
+}
+
+.basic-info {
+  padding: 0;
+  list-style-type: none;
+}
+
+.basic-info-list,
+.basic-info-list-link {
+  margin: 0px 0px 20px 10px;
+  padding: 20px;
+  width: 260px;
+  border-radius: 16px;
+}
+
+.basic-info-list {
+  outline: 1px solid #03a9f4;
+  display: flex;
+  justify-content: space-between;
+}
+
+.basic-info-list-link {
+  outline: 2px solid #03a9f4;
+  text-align: center;
+  transition: 1s;
+}
+.basic-info-list-link:focus {
+  outline: 2px solid #ffffff;
+  box-shadow: 1px 1px 10px rgba(3, 244, 13, 0.6196078431);
+}
+.basic-info-list-link:hover {
+  outline: 2px solid #ffffff;
+  box-shadow: 1px 1px 10px rgba(3, 244, 13, 0.6196078431);
+}
+
+.order-link {
+  font-family: "Gabriela", serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  color: #03a9f4;
+  text-decoration: none;
+  font-weight: 600;
+}
+.order-link:hover {
+  color: 1px 1px 2px rgba(3, 244, 13, 0.6196078431);
+}
+
+.basic-info-icon {
+  padding-top: 10px;
+  margin-right: 5px;
+}
+
+.item-desc-img,
+.basic-info-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.item-desc-text {
+  flex-grow: 1;
+  text-align: end;
+  align-content: center;
+  font-weight: 600;
 }
 
 @media (min-width: 620px) {
