--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -85,12 +85,80 @@
 /* section item desc */
 
 .item-desc {
-  padding: 20px;
   @include font(14px);
 }
 
 .item-text {
   font-size: 14px;
+}
+
+.basic-info {
+  padding: 0;
+  list-style-type: none;
+}
+
+.basic-info-list,
+.basic-info-list-link {
+  margin: 0px 0px 20px 10px;
+  padding: 20px;
+  width: 260px;
+
+  border-radius: 16px;
+}
+
+.basic-info-list {
+  outline: 1px solid #03a9f4;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.basic-info-list-link {
+  outline: 2px solid #03a9f4;
+
+  text-align: center;
+
+  transition: 1s;
+
+  &:focus {
+    outline: 2px solid #ffffff;
+    box-shadow: 1px 1px 10px rgba(3, 244, 13, 0.6196078431);
+  }
+
+  &:hover {
+    outline: 2px solid #ffffff;
+    box-shadow: 1px 1px 10px rgba(3, 244, 13, 0.6196078431);
+  }
+}
+
+.order-link {
+  @include font(16px, #03a9f4);
+
+  text-decoration: none;
+  font-weight: 600;
+
+  &:hover {
+    color: 1px 1px 2px rgba(3, 244, 13, 0.6196078431);
+  }
+}
+
+.basic-info-icon {
+  padding-top: 10px;
+  margin-right: 5px;
+}
+
+.item-desc-img,
+.basic-info-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.item-desc-text {
+  flex-grow: 1;
+  text-align: end;
+  align-content: center;
+
+  font-weight: 600;
 }
 
 @media (min-width: 620px) {
