--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -215,10 +215,15 @@
 }
 
 .main-container {
-  min-height: 600px;
+  height: 600px;
   background: url("../img/main-img.jpg") center top no-repeat;
 }
 
+@media (min-width: 620px) {
+  .main-container {
+    height: 750px;
+  }
+}
 /* section category page */
 /* mixin */
 /* mixin */
@@ -299,7 +304,6 @@
 
 /* section item desc */
 .item-desc {
-  padding: 20px;
   font-family: "Gabriela", serif;
   font-size: 14px;
   font-weight: 400;
@@ -309,6 +313,70 @@
 
 .item-text {
   font-size: 14px;
+}
+
+.basic-info {
+  padding: 0;
+  list-style-type: none;
+}
+
+.basic-info-list,
+.basic-info-list-link {
+  margin: 0px 0px 20px 10px;
+  padding: 20px;
+  width: 260px;
+  border-radius: 16px;
+}
+
+.basic-info-list {
+  outline: 1px solid #03a9f4;
+  display: flex;
+  justify-content: space-between;
+}
+
+.basic-info-list-link {
+  outline: 2px solid #03a9f4;
+  text-align: center;
+  transition: 1s;
+}
+.basic-info-list-link:focus {
+  outline: 2px solid #ffffff;
+  box-shadow: 1px 1px 10px rgba(3, 244, 13, 0.6196078431);
+}
+.basic-info-list-link:hover {
+  outline: 2px solid #ffffff;
+  box-shadow: 1px 1px 10px rgba(3, 244, 13, 0.6196078431);
+}
+
+.order-link {
+  font-family: "Gabriela", serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  color: #03a9f4;
+  text-decoration: none;
+  font-weight: 600;
+}
+.order-link:hover {
+  color: 1px 1px 2px rgba(3, 244, 13, 0.6196078431);
+}
+
+.basic-info-icon {
+  padding-top: 10px;
+  margin-right: 5px;
+}
+
+.item-desc-img,
+.basic-info-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.item-desc-text {
+  flex-grow: 1;
+  text-align: end;
+  align-content: center;
+  font-weight: 600;
 }
 
 @media (min-width: 620px) {
@@ -460,7 +528,7 @@
 
 html,
 body {
-  min-height: 90vh;
+  min-height: 100vh;
   margin: 0;
 }
 
