--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -104,8 +104,8 @@
 .basic-info-list,
 .basic-info-list-link {
   margin: 0px 0px 20px 10px;
-  padding: 20px;
-  width: 250px;
+  padding: 10px;
+  width: 260px;
   height: 100px;
 
   border-radius: 16px;
@@ -118,6 +118,7 @@
 
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .basic-info-list-link {
@@ -150,7 +151,6 @@
 }
 
 .basic-info-icon {
-  padding-top: 10px;
   margin-right: 5px;
 }
 
