--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -89,6 +89,8 @@
 }
 
 .item-text {
+  padding: 50px 20px;
+
   font-size: 14px;
 }
 
@@ -160,6 +162,10 @@
   height: 20px;
 }
 
+.item-desc-title {
+  padding: 25px 5px 5px 5px;
+}
+
 .item-desc-text {
   padding-left: 10px;
 
@@ -170,8 +176,17 @@
   font-weight: 600;
 }
 
-.item-text {
-  padding: 50px 20px;
+.item-desc-table {
+  list-style-type: none;
+  padding: 0;
+}
+
+.item-desc-list {
+  padding: 10px 0px;
+}
+
+.item-desc-list-title {
+  font-weight: 600;
 }
 
 @media (min-width: 620px) {
@@ -180,7 +195,8 @@
   }
 
   .item-text,
-  .item-cart-desc {
+  .item-cart-desc,
+  .item-desc-list-title {
     font-size: 16px;
   }
 
