--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -312,6 +312,7 @@
 }
 
 .item-text {
+  padding: 50px 20px;
   font-size: 14px;
 }
 
@@ -377,6 +378,10 @@
   height: 20px;
 }
 
+.item-desc-title {
+  padding: 25px 5px 5px 5px;
+}
+
 .item-desc-text {
   padding-left: 10px;
   flex-grow: 1;
@@ -385,8 +390,17 @@
   font-weight: 600;
 }
 
-.item-text {
-  padding: 50px 20px;
+.item-desc-table {
+  list-style-type: none;
+  padding: 0;
+}
+
+.item-desc-list {
+  padding: 10px 0px;
+}
+
+.item-desc-list-title {
+  font-weight: 600;
 }
 
 @media (min-width: 620px) {
@@ -394,7 +408,8 @@
     height: 250px;
   }
   .item-text,
-  .item-cart-desc {
+  .item-cart-desc,
+  .item-desc-list-title {
     font-size: 16px;
   }
   .item-title {
