заменила слова подробнее и закрыть на стрелки в мобильной версии

--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -67,15 +67,24 @@
 }
 
 .item-title::after {
+  margin-left: 5px;
   display: inline-block;
-  content: "подробнее ...";
-  font-size: 14px;
+  width: 20px;
+  height: 20px;
+  content: "";
+  background: url(../img/caret.png) no-repeat;
+  padding-right: 0.5em;
+  background-size: 12px;
+  transform: rotateZ(90deg);
+  translate: 0px 4px;
 }
 
 .item-list[open] > summary::after {
-  content: "закрыть";
-  font-size: 14px;
-  text-shadow: 1px 1px 2px #03f40d9e;
+  content: "";
+  background: url(../img/caret.png) no-repeat;
+  background-size: 12px;
+  transform: rotateZ(-90deg);
+  translate: 0px -2px;
 }
 
 .item-list[open] {
@@ -107,7 +116,7 @@
 .basic-info-list-link {
   margin: 0px 0px 20px 10px;
   padding: 10px;
-  width: 260px;
+  width: 265px;
   height: 100px;
 
   border-radius: 16px;
@@ -176,6 +185,8 @@
   font-weight: 600;
 }
 
+/* item desc list */
+
 .item-desc-table {
   list-style-type: none;
   padding: 0;
@@ -186,7 +197,39 @@
 }
 
 .item-desc-list-title {
+  padding-left: 20px;
   font-weight: 600;
+}
+
+@media (min-width: 420px) {
+  .item-title::after {
+    display: inline-block;
+    content: "подробнее ...";
+    font-size: 14px;
+
+    width: auto;
+    height: auto;
+
+    background: none;
+    background-size: auto;
+
+    transform: none;
+    translate: none;
+  }
+
+  .item-list[open] > summary::after {
+    content: "закрыть";
+    font-size: 14px;
+
+    width: auto;
+    height: auto;
+
+    background: none;
+    background-size: auto;
+
+    transform: none;
+    translate: none;
+  }
 }
 
 @media (min-width: 620px) {
@@ -205,18 +248,11 @@
   }
 
   .item-list[open] > summary::after {
-    content: "закрыть";
     font-size: 16px;
-
-    padding-top: 15px;
   }
 
   .item-title::after {
-    display: inline-block;
-    content: "подробнее ...";
     font-size: 16px;
-
-    padding-top: 15px;
   }
 
   .basic-info-list,
@@ -247,13 +283,10 @@
   }
 
   .item-list[open] > summary::after {
-    content: "закрыть";
     font-size: 20px;
   }
 
   .item-title::after {
-    display: inline-block;
-    content: "подробнее ...";
     font-size: 20px;
   }
 }
