--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -287,15 +287,24 @@
 }
 
 .item-title::after {
+  margin-left: 5px;
   display: inline-block;
-  content: "подробнее ...";
-  font-size: 14px;
+  width: 20px;
+  height: 20px;
+  content: "";
+  background: url(../img/caret.png) no-repeat;
+  padding-right: 0.5em;
+  background-size: 12px;
+  transform: rotateZ(90deg);
+  translate: 0px 4px;
 }
 
 .item-list[open] > summary::after {
-  content: "закрыть";
-  font-size: 14px;
-  text-shadow: 1px 1px 2px rgba(3, 244, 13, 0.6196078431);
+  content: "";
+  background: url(../img/caret.png) no-repeat;
+  background-size: 12px;
+  transform: rotateZ(-90deg);
+  translate: 0px -2px;
 }
 
 .item-list[open] {
@@ -328,7 +337,7 @@
 .basic-info-list-link {
   margin: 0px 0px 20px 10px;
   padding: 10px;
-  width: 260px;
+  width: 265px;
   height: 100px;
   border-radius: 16px;
   align-content: center;
@@ -390,6 +399,7 @@
   font-weight: 600;
 }
 
+/* item desc list */
 .item-desc-table {
   list-style-type: none;
   padding: 0;
@@ -400,9 +410,33 @@
 }
 
 .item-desc-list-title {
+  padding-left: 20px;
   font-weight: 600;
 }
 
+@media (min-width: 420px) {
+  .item-title::after {
+    display: inline-block;
+    content: "подробнее ...";
+    font-size: 14px;
+    width: auto;
+    height: auto;
+    background: none;
+    background-size: auto;
+    transform: none;
+    translate: none;
+  }
+  .item-list[open] > summary::after {
+    content: "закрыть";
+    font-size: 14px;
+    width: auto;
+    height: auto;
+    background: none;
+    background-size: auto;
+    transform: none;
+    translate: none;
+  }
+}
 @media (min-width: 620px) {
   .item-img {
     height: 250px;
@@ -416,15 +450,10 @@
     font-size: 20px;
   }
   .item-list[open] > summary::after {
-    content: "закрыть";
     font-size: 16px;
-    padding-top: 15px;
   }
   .item-title::after {
-    display: inline-block;
-    content: "подробнее ...";
     font-size: 16px;
-    padding-top: 15px;
   }
   .basic-info-list,
   .basic-info-list-link {
@@ -449,12 +478,9 @@
     font-size: 25px;
   }
   .item-list[open] > summary::after {
-    content: "закрыть";
     font-size: 20px;
   }
   .item-title::after {
-    display: inline-block;
-    content: "подробнее ...";
     font-size: 20px;
   }
 }
