--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* mixin */
 /* mixin */
 .category-main-container {
@@ -14,6 +13,7 @@
 .item-cart {
   position: relative;
   min-width: 280px;
+  max-width: 450px;
   margin-bottom: 30px;
   /*shadow */
   outline: 1px solid #d6d3d3;
@@ -166,7 +166,6 @@
 }
 
 .item-desc-text {
-  padding-left: 10px;
   flex-grow: 1;
   text-align: end;
   align-content: center;
@@ -204,31 +203,18 @@
 }
 
 @media (min-width: 420px) {
-  .item-title::after {
-    display: inline-block;
-    content: "подробнее ...";
-    font-size: 14px;
-    width: auto;
-    height: auto;
-    background: none;
-    background-size: auto;
-    transform: none;
-    translate: none;
-  }
-  .item-list[open] > summary::after {
-    content: "закрыть";
-    font-size: 14px;
-    width: auto;
-    height: auto;
-    background: none;
-    background-size: auto;
-    transform: none;
-    translate: none;
+  .basic-info-list,
+  .basic-info-list-link {
+    width: 280px;
   }
 }
 @media (min-width: 620px) {
-  .item-img {
-    height: 250px;
+  .items-container {
+    display: flex;
+    justify-content: center;
+  }
+  .item-cart {
+    width: 450px;
   }
   .item-text,
   .item-cart-desc,
@@ -240,10 +226,12 @@
     font-size: 20px;
   }
   .item-list[open] > summary::after {
-    font-size: 16px;
+    background-size: 15px;
+    translate: 0px 2px;
   }
   .item-title::after {
-    font-size: 16px;
+    background-size: 15px;
+    translate: 0px 10px;
   }
   .basic-info-list,
   .basic-info-list-link {
@@ -251,9 +239,6 @@
   }
 }
 @media (min-width: 700px) {
-  .item-img {
-    height: 300px;
-  }
   .basic-info-list,
   .basic-info-list-link {
     width: 300px;
