--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* mixin */
 /* mixin */
 /* header */
@@ -240,6 +239,7 @@
 .item-cart {
   position: relative;
   min-width: 280px;
+  max-width: 450px;
   margin-bottom: 30px;
   /*shadow */
   outline: 1px solid #d6d3d3;
@@ -392,7 +392,6 @@
 }
 
 .item-desc-text {
-  padding-left: 10px;
   flex-grow: 1;
   text-align: end;
   align-content: center;
@@ -422,7 +421,7 @@
 .gallery-title {
   padding-bottom: 20px;
   font-family: "Gabriela", serif;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   font-style: normal;
   color: #03a9f4;
@@ -430,31 +429,18 @@
 }
 
 @media (min-width: 420px) {
-  .item-title::after {
-    display: inline-block;
-    content: "подробнее ...";
-    font-size: 14px;
-    width: auto;
-    height: auto;
-    background: none;
-    background-size: auto;
-    transform: none;
-    translate: none;
-  }
-  .item-list[open] > summary::after {
-    content: "закрыть";
-    font-size: 14px;
-    width: auto;
-    height: auto;
-    background: none;
-    background-size: auto;
-    transform: none;
-    translate: none;
+  .basic-info-list,
+  .basic-info-list-link {
+    width: 280px;
   }
 }
 @media (min-width: 620px) {
-  .item-img {
-    height: 250px;
+  .items-container {
+    display: flex;
+    justify-content: center;
+  }
+  .item-cart {
+    width: 450px;
   }
   .item-text,
   .item-cart-desc,
@@ -466,10 +452,12 @@
     font-size: 20px;
   }
   .item-list[open] > summary::after {
-    font-size: 16px;
+    background-size: 15px;
+    translate: 0px 2px;
   }
   .item-title::after {
-    font-size: 16px;
+    background-size: 15px;
+    translate: 0px 10px;
   }
   .basic-info-list,
   .basic-info-list-link {
@@ -477,9 +465,6 @@
   }
 }
 @media (min-width: 700px) {
-  .item-img {
-    height: 300px;
-  }
   .basic-info-list,
   .basic-info-list-link {
     width: 300px;
