переопределила стили Bootstrap в отзывах

--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -222,7 +222,7 @@
     font-size: 16px;
   }
   .item-title,
-  .item-gallery-title {
+  .gallery-title {
     font-size: 20px;
   }
   .item-list[open] > summary::after {
@@ -250,7 +250,7 @@
     font-size: 20px;
   }
   .item-title,
-  .item-gallery-title {
+  .gallery-title {
     font-size: 25px;
   }
   .item-list[open] > summary::after {
