--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -237,7 +237,7 @@
   }
 
   .item-title,
-  .item-gallery-title {
+  .gallery-title {
     font-size: 20px;
   }
 
@@ -271,7 +271,7 @@
   }
 
   .item-title,
-  .item-gallery-title {
+  .gallery-title {
     font-size: 25px;
   }
 
