--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -17,9 +17,10 @@
 
 /* review-cart */
 .review-cart {
-  padding: 10px 40px;
+  padding: 10px 20px;
   min-width: 240px;
   max-width: 450px;
+  height: 500px;
   font-family: "Gabriela", serif;
   font-size: 14px;
   font-weight: 400;
@@ -55,6 +56,9 @@
 }
 
 @media (min-width: 620px) {
+  .review-cart {
+    height: 350px;
+  }
   .reviews-title {
     font-size: 20px;
   }
