--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -237,7 +237,6 @@
 
 /* item cart */
 .item-cart {
-  position: relative;
   min-width: 280px;
   max-width: 450px;
   margin-bottom: 30px;
@@ -555,9 +554,10 @@
 
 /* review-cart */
 .review-cart {
-  padding: 10px 40px;
+  padding: 10px 20px;
   min-width: 240px;
   max-width: 450px;
+  height: 500px;
   font-family: "Gabriela", serif;
   font-size: 14px;
   font-weight: 400;
@@ -593,6 +593,9 @@
 }
 
 @media (min-width: 620px) {
+  .review-cart {
+    height: 350px;
+  }
   .reviews-title {
     font-size: 20px;
   }
