--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -83,7 +83,7 @@
   position: fixed;
   right: -15px;
   top: 20px;
-  padding: 30px 10px;
+  padding: 20px;
   width: 250px;
   background-color: #ffffff;
   outline: 1px solid #03a9f4;
@@ -136,7 +136,7 @@
   padding-right: 0.5em;
   background-size: 15px;
   transform: rotateZ(90deg);
-  translate: 0px 10px;
+  translate: 0px 6px;
 }
 
 .list[open] > summary::after {
@@ -144,7 +144,7 @@
   background: url("../img/caret.png") no-repeat;
   background-size: 15px;
   transform: rotateZ(-90deg);
-  translate: 0px -3px;
+  translate: 4px 4px;
 }
 
 .list-menu {
