--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -583,15 +583,21 @@
 .arrow-left {
   background: url(../img/caret.png) no-repeat;
   background-size: 20px;
+  translate: 15px 0px;
 }
 
 .arrow-right {
   background: url(../img/caret.png) no-repeat;
   background-size: 20px;
   transform: rotate(-180deg);
-  translate: 0px -12px;
+  translate: -15px -12px;
 }
 
+@media (min-width: 420px) {
+  .review-cart {
+    height: 350px;
+  }
+}
 @media (min-width: 620px) {
   .review-cart {
     height: 350px;
