--- a/scss-css/blocks/reviews.scss
+++ b/scss-css/blocks/reviews.scss
@@ -27,12 +27,25 @@
   border-radius: 16px;
 }
 
+.review-cart-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: scape-between;
+}
+
 .review-text {
   color: black;
+  flex-grow: 1;
 }
+
 .item-name,
-.guide-name {
+.guide-name,
+.review-date {
   font-size: 12px;
+}
+
+.review-date {
+  text-align: end;
 }
 
 .span-guide-name {
@@ -70,7 +83,8 @@
   }
 
   .item-name,
-  .guide-name {
+  .guide-name,
+  .review-date {
     font-size: 14px;
   }
 
@@ -93,7 +107,8 @@
   }
 
   .item-name,
-  .guide-name {
+  .guide-name,
+  .review-date {
     font-size: 16px;
   }
 }
