--- a/scss-css/blocks/main.scss
+++ b/scss-css/blocks/main.scss
@@ -1,14 +1,34 @@
-.main-page-container {
-  background-color: #d7dcdf;
-}
+/* mixin */
+@import "mixin.scss";
 
 .main-container {
-  height: 600px;
-  background: url("../img/main-img.jpg") center top no-repeat;
+  background-color: #fff6ef;
+
+  outline: 1px solid green;
+}
+
+.main-info {
+  padding-top: 20px;
+  @include font();
+
+  align-content: center;
+}
+
+.main-info-title {
+  text-align: center;
+}
+
+.main-info-img {
+  width: 280px;
+  object-fit: cover;
 }
 
 @media (min-width: 620px) {
   .main-container {
-    height: 750px;
+    display: flex;
+  }
+
+  .main-info {
+    padding: 20px;
   }
 }
